[CacheStorage] Prioritize Size operations over other scheduled operations

This CL runs pending Size() operations immediately after backend
initialization instead of in scheduler order. This is because
scheduled operations might depend on the QuotaManager which may call
Size() mid-operation.

BUG=605663

Review URL: https://codereview.chromium.org/1916473002

Cr-Commit-Position: refs/heads/master@{#389184}

Former-commit-id: 8b14d719f48c5d2b1f2f61fec372ee01e5f938a8